fixed css when scrollbar appears

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body {
     padding: 0;
 }
 .main {
-    width: 100vw;
-    height: 100vh;
+    width: calc(100vw - 15px);
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     display: flex;
